[fix]broken CSS

--- a/src/components/userProfile/components/styles.css
+++ b/src/components/userProfile/components/styles.css
@@ -4,7 +4,7 @@
 }
 
 /* heading in userInfo.js */
-h4 {
+.header-info {
     background-color: ghostwhite;
     color: black;
     font-size: 13px;
